Ensure correct width is used on IE8

--- a/web/cobrands/eastsussex/layout.scss
+++ b/web/cobrands/eastsussex/layout.scss
@@ -17,7 +17,7 @@
 }
 
 .container, .eastsussex-container {
-    width: initial;
+    width: 100%;
     max-width: 966px;
 }
 
